tests/_data/example_submissions/compile_error/src.java
import java.util.Scanner;

class Main{
    //adds two numbers
    public static void main(String[] args){
        Scanner reader = new Scanner(System.in);
        int one, two
        one = reader.nextInt();
		two = reader.nextInt();
		System.out.println(one+two);
    }
}

